removed background color, fixed spacing

--- a/main.css
+++ b/main.css
@@ -1,16 +1,10 @@
 body {
-	background-color: yellow;
+	background-color: white;
 	text-align: center;
 }
 
 #opener {
-  border: 2px solid white;
   color: black;
   padding: 5% 5% 5% 5%;
   width: 50%;
-  background-color: white;
-  border-radius: 10px;
-  box-shadow: 5px 5px 5px black;
-  opacity: 0.9;
-  display: inline-block;
 }
